--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "discord.js": "^14.13.0",
     "djs-commander": "^0.0.50",
     "dotenv": "^16.3.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
+    "tatsu": "^1.2.0",
+    "tatsu.js": "^0.1.6",
     "twit": "^2.2.11",
     "twitter": "^1.7.1",
     "twitter-url-parser": "^0.0.1"
