--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ constants/firebase-setup.js
 /constants/firebase-setup.js
 /constants/vericode-bot-firebase-adminsdk-ay60l-dd452d2709.json
 constants/vericode-bot-firebase-adminsdk-ay60l-dd452d2709.json
+output.csv
