--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@json2csv/plainjs": "^7.0.3",
     "discord.js": "^14.13.0",
     "djs-commander": "^0.0.50",
     "dotenv": "^16.3.1",
+    "firebase-admin": "^11.11.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
