--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@json2csv/plainjs": "^7.0.3",
+    "axios": "^1.5.1",
+    "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.13.0",
     "djs-commander": "^0.0.50",
     "dotenv": "^16.3.1",
@@ -20,9 +21,6 @@
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "tatsu": "^1.2.0",
-    "tatsu.js": "^0.1.6",
-    "twit": "^2.2.11",
-    "twitter": "^1.7.1",
-    "twitter-url-parser": "^0.0.1"
+    "tatsu.js": "^0.1.6"
   }
 }
