--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apify-client": "^2.8.1",
     "axios": "^1.5.1",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.13.0",
@@ -21,6 +22,7 @@
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "tatsu": "^1.2.0",
-    "tatsu.js": "^0.1.6"
+    "tatsu.js": "^0.1.6",
+    "twitter-api-v2": "^1.15.2"
   }
 }
