--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
-    "tatsu": "^1.2.0",
-    "tatsu.js": "^0.1.6",
-    "twitter-api-v2": "^1.15.2"
+    "tatsu": "^1.2.0"
   }
 }
